Trying to follow naming conventions and some cleanup