@@ -1,8 +1,6 @@
 package com.gamingmesh.jobs.stuff;
 
-import java.lang.reflect.Constructor;
 import java.lang.reflect.Field;
-import java.lang.reflect.Method;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map.Entry;
@@ -13,7 +11,6 @@ import org.bukkit.Bukkit;
 import org.bukkit.entity.Player;
 import org.bukkit.scoreboard.DisplaySlot;
 import org.bukkit.scoreboard.Objective;
-import org.bukkit.scoreboard.Scoreboard;
 
 import com.gamingmesh.jobs.Jobs;
 import com.gamingmesh.jobs.CMILib.CMIChatColor;
@@ -25,20 +22,20 @@ public class CMIScoreboardManager {
 
     private ConcurrentHashMap<UUID, ScoreboardInfo> timerMap = new ConcurrentHashMap<>();
 
-    private void RunScheduler() {
-	Iterator<Entry<UUID, ScoreboardInfo>> MeinMapIter = timerMap.entrySet().iterator();
-	while (MeinMapIter.hasNext()) {
-	    Entry<UUID, ScoreboardInfo> Map = MeinMapIter.next();
+    private void runScheduler() {
+	Iterator<Entry<UUID, ScoreboardInfo>> meinMapIter = timerMap.entrySet().iterator();
+	while (meinMapIter.hasNext()) {
+	    Entry<UUID, ScoreboardInfo> map = meinMapIter.next();
 
-	    if (System.currentTimeMillis() > Map.getValue().getTime() + (Jobs.getGCManager().ToplistInScoreboardInterval * 1000)) {
-		Player player = Bukkit.getPlayer(Map.getKey());
+	    if (System.currentTimeMillis() > map.getValue().getTime() + (Jobs.getGCManager().ToplistInScoreboardInterval * 1000)) {
+		Player player = Bukkit.getPlayer(map.getKey());
 		if (player != null) {
 		    removeScoreBoard(player);
 		    player.getScoreboard().clearSlot(DisplaySlot.SIDEBAR);
 
-		    if (Map.getValue().getObj() != null) {
+		    if (map.getValue().getObj() != null) {
 			try {
-			    Objective obj = player.getScoreboard().getObjective(Map.getValue().getObj().getName());
+			    Objective obj = player.getScoreboard().getObjective(map.getValue().getObj().getName());
 			    if (obj != null)
 				obj.setDisplaySlot(DisplaySlot.SIDEBAR);
 			} catch (IllegalStateException e) {
@@ -46,47 +43,92 @@ public class CMIScoreboardManager {
 		    }
 		}
 
-		timerMap.remove(Map.getKey());
+		timerMap.remove(map.getKey());
 	    }
 	}
 
 	if (timerMap.size() > 0)
-	    Bukkit.getServer().getScheduler().scheduleSyncDelayedTask(Jobs.getInstance(), this::RunScheduler, 20L);
+	    Bukkit.getServer().getScheduler().scheduleSyncDelayedTask(Jobs.getInstance(), this::runScheduler, 20L);
     }
 
     public void addNew(Player player) {
-	Scoreboard scoreBoard = player.getScoreboard();
-	timerMap.put(player.getUniqueId(), new ScoreboardInfo(scoreBoard, DisplaySlot.SIDEBAR));
-	RunScheduler();
+	timerMap.put(player.getUniqueId(), new ScoreboardInfo(player.getScoreboard(), DisplaySlot.SIDEBAR));
+	runScheduler();
     }
 
     private final String objName = "CMIScoreboard";
 
     public void removeScoreBoard(Player player) {
 	try {
-
-	    Class<?> boardClass = getNMSClass("Scoreboard");
-	    Object boards = boardClass.getConstructor().newInstance();
-
 	    if (Version.isCurrentEqualOrHigher(Version.v1_13_R1)) {
-		Class<?> p0 = getNMSClass("PacketPlayOutScoreboardObjective");
-		Constructor<?> p00 = p0.getConstructor();
-		Object pp1 = p00.newInstance();
+		Object pp1 = getNMSClass("PacketPlayOutScoreboardObjective").getConstructor().newInstance();
 		setField(pp1, "a", player.getName());
 		setField(pp1, "d", 1);
 		sendPacket(player, pp1);
 	    } else {
-		Method m = boards.getClass().getMethod("registerObjective", String.class, getNMSClass("IScoreboardCriteria"));
+		Object boards = getNMSClass("Scoreboard").getConstructor().newInstance();
 
-		Class<?> IScoreboardCriterias = getNMSClass("ScoreboardBaseCriteria");
-		Constructor<?> IScoreboardCriteriasConst = IScoreboardCriterias.getConstructor(String.class);
-		Object IScoreboardCriteria = IScoreboardCriteriasConst.newInstance("JobsDummy");
+		Object obj = boards.getClass().getMethod("registerObjective", String.class,
+			getNMSClass("IScoreboardCriteria")).invoke(boards, objName,
+				getNMSClass("ScoreboardBaseCriteria").getConstructor(String.class).newInstance("JobsDummy"));
+		sendPacket(player, getNMSClass("PacketPlayOutScoreboardObjective").getConstructor(obj.getClass(), int.class).newInstance(obj, 1));
+	    }
+	} catch (Exception e) {
+	    e.printStackTrace();
+	}
+    }
 
-		Object obj = m.invoke(boards, objName, IScoreboardCriteria);
-		Class<?> p1 = getNMSClass("PacketPlayOutScoreboardObjective");
-		Constructor<?> p11 = p1.getConstructor(obj.getClass(), int.class);
-		Object pp1 = p11.newInstance(obj, 1);
+    public void setScoreBoard(Player player, String displayName, List<String> lines) {
+	removeScoreBoard(player);
+
+	try {
+	    if (Version.isCurrentEqualOrHigher(Version.v1_13_R1)) {
+		Object pp1 = getNMSClass("PacketPlayOutScoreboardObjective").getConstructor().newInstance();
+		setField(pp1, "a", player.getName());
+		setField(pp1, "d", 0);
+		setField(pp1, "b", getNMSClass("ChatComponentText").getConstructor(String.class).newInstance(CMIChatColor.translate(displayName)));
+		setField(pp1, "c", getNMSClass("IScoreboardCriteria$EnumScoreboardHealthDisplay").getEnumConstants()[1]);
 		sendPacket(player, pp1);
+
+		Object d0 = getNMSClass("PacketPlayOutScoreboardDisplayObjective").getConstructor().newInstance();
+		setField(d0, "a", 1);
+		setField(d0, "b", player.getName());
+		sendPacket(player, d0);
+
+		for (int i = 0; i < 15; i++) {
+		    if (i >= lines.size())
+			break;
+		    Object PacketPlayOutScoreboardScore = getNMSClass("PacketPlayOutScoreboardScore").getConstructor().newInstance();
+
+		    setField(PacketPlayOutScoreboardScore, "a", CMIChatColor.translate(lines.get(i)));
+		    setField(PacketPlayOutScoreboardScore, "b", player.getName());
+		    setField(PacketPlayOutScoreboardScore, "c", 15 - i);
+		    setField(PacketPlayOutScoreboardScore, "d", getNMSClass("ScoreboardServer$Action").getEnumConstants()[0]);
+		    sendPacket(player, PacketPlayOutScoreboardScore);
+		}
+	    } else {
+		Object boards = getNMSClass("Scoreboard").getConstructor().newInstance();
+		Object obj = boards.getClass().getMethod("registerObjective", String.class, getNMSClass("IScoreboardCriteria"))
+			.invoke(boards, objName, getNMSClass("ScoreboardBaseCriteria").getConstructor(String.class).newInstance("JobsDummy"));
+
+		obj.getClass().getMethod("setDisplayName", String.class).invoke(obj, CMIChatColor.translate(displayName));
+
+		sendPacket(player, getNMSClass("PacketPlayOutScoreboardObjective").getConstructor(obj.getClass(), int.class).newInstance(obj, 1));
+		sendPacket(player, getNMSClass("PacketPlayOutScoreboardObjective").getConstructor(obj.getClass(), int.class).newInstance(obj, 0));
+
+		sendPacket(player, getNMSClass("PacketPlayOutScoreboardDisplayObjective").getConstructor(int.class,
+			getNMSClass("ScoreboardObjective")).newInstance(1, obj));
+
+		for (int i = 0; i < 15; i++) {
+		    if (i >= lines.size())
+			break;
+
+		    Object packet2 = getNMSClass("ScoreboardScore").getConstructor(getNMSClass("Scoreboard"),
+		        getNMSClass("ScoreboardObjective"), String.class).newInstance(boards, obj, CMIChatColor.translate(lines.get(i)));
+		    packet2.getClass().getMethod("setScore", int.class).invoke(packet2, 15 - i);
+
+		    sendPacket(player, getNMSClass("PacketPlayOutScoreboardScore").getConstructor(getNMSClass("ScoreboardScore")).newInstance(packet2));
+		}
 	    }
 	} catch (Exception e) {
 	    e.printStackTrace();
@@ -103,101 +145,9 @@ public class CMIScoreboardManager {
 	}
     }
 
-    public void setScoreBoard(Player player, String displayName, List<String> lines) {
-	removeScoreBoard(player);
-	try {
-	    Class<?> boardClass = getNMSClass("Scoreboard");
-	    Object boards = boardClass.getConstructor().newInstance();
-	    if (Version.isCurrentEqualOrHigher(Version.v1_13_R1)) {
-		Class<?> enums = getNMSClass("IScoreboardCriteria$EnumScoreboardHealthDisplay");
-
-		Class<?> p0 = getNMSClass("PacketPlayOutScoreboardObjective");
-		Constructor<?> p00 = p0.getConstructor();
-		Object pp1 = p00.newInstance();
-		setField(pp1, "a", player.getName());
-		setField(pp1, "d", 0);
-		Object chatComponentText = getNMSClass("ChatComponentText").getConstructor(String.class).newInstance(CMIChatColor.translate(displayName));
-		setField(pp1, "b", chatComponentText);
-		setField(pp1, "c", enums.getEnumConstants()[1]);
-		sendPacket(player, pp1);
-
-		Object d0 = getNMSClass("PacketPlayOutScoreboardDisplayObjective").getConstructor().newInstance();
-		setField(d0, "a", 1);
-		setField(d0, "b", player.getName());
-		sendPacket(player, d0);
-
-		for (int i = 0; i < 15; i++) {
-		    if (i >= lines.size())
-			break;
-		    String ln = CMIChatColor.translate(lines.get(i));
-		    Class<?> PacketPlayOutScoreboardScoreClass = getNMSClass("PacketPlayOutScoreboardScore");
-		    Constructor<?> PacketPlayOutScoreboardScoreConstructor = PacketPlayOutScoreboardScoreClass.getConstructor();
-		    Object PacketPlayOutScoreboardScore = PacketPlayOutScoreboardScoreConstructor.newInstance();
-		    Class<?> aenums = getNMSClass("ScoreboardServer$Action");
-
-		    setField(PacketPlayOutScoreboardScore, "a", ln);
-		    setField(PacketPlayOutScoreboardScore, "b", player.getName());
-		    setField(PacketPlayOutScoreboardScore, "c", 15 - i);
-		    setField(PacketPlayOutScoreboardScore, "d", aenums.getEnumConstants()[0]);
-		    sendPacket(player, PacketPlayOutScoreboardScore);
-		}
-	    } else {
-
-		Method m = boards.getClass().getMethod("registerObjective", String.class, getNMSClass("IScoreboardCriteria"));
-
-		Class<?> IScoreboardCriterias = getNMSClass("ScoreboardBaseCriteria");
-		Constructor<?> IScoreboardCriteriasConst = IScoreboardCriterias.getConstructor(String.class);
-		Object IScoreboardCriteria = IScoreboardCriteriasConst.newInstance("JobsDummy");
-
-		Object obj = m.invoke(boards, objName, IScoreboardCriteria);
-
-		Method mm = obj.getClass().getMethod("setDisplayName", String.class);
-		mm.invoke(obj, CMIChatColor.translate(displayName));
-
-		Class<?> p1 = getNMSClass("PacketPlayOutScoreboardObjective");
-		Constructor<?> p11 = p1.getConstructor(obj.getClass(), int.class);
-		Object pp1 = p11.newInstance(obj, 1);
-		sendPacket(player, pp1);
-
-		Class<?> p2 = getNMSClass("PacketPlayOutScoreboardObjective");
-		Constructor<?> p12 = p2.getConstructor(obj.getClass(), int.class);
-		Object pp2 = p12.newInstance(obj, 0);
-		sendPacket(player, pp2);
-
-		Class<?> packetClass = getNMSClass("PacketPlayOutScoreboardDisplayObjective");
-		Constructor<?> packetConstructor = packetClass.getConstructor(int.class, getNMSClass("ScoreboardObjective"));
-		Object packet = packetConstructor.newInstance(1, obj);
-		sendPacket(player, packet);
-
-		for (int i = 0; i < 15; i++) {
-		    if (i >= lines.size())
-			break;
-
-		    String ln = CMIChatColor.translate(lines.get(i));
-		    Class<?> ScoreboardScoreClass = getNMSClass("ScoreboardScore");
-		    Constructor<?> packetConstructor2 = ScoreboardScoreClass.getConstructor(getNMSClass("Scoreboard"), getNMSClass("ScoreboardObjective"), String.class);
-		    Object packet2 = packetConstructor2.newInstance(boards, obj, ln);
-		    Method mc = packet2.getClass().getMethod("setScore", int.class);
-		    mc.invoke(packet2, 15 - i);
-
-		    Class<?> PacketPlayOutScoreboardScoreClass = getNMSClass("PacketPlayOutScoreboardScore");
-		    Constructor<?> PacketPlayOutScoreboardScoreConstructor = PacketPlayOutScoreboardScoreClass.getConstructor(getNMSClass("ScoreboardScore"));
-		    Object PacketPlayOutScoreboardScore = PacketPlayOutScoreboardScoreConstructor.newInstance(packet2);
-
-		    sendPacket(player, PacketPlayOutScoreboardScore);
-
-		}
-	    }
-	} catch (Exception e) {
-	    e.printStackTrace();
-	}
-    }
-
     private static void sendPacket(Player player, Object packet) {
-	Method sendPacket;
 	try {
-	    sendPacket = getNMSClass("PlayerConnection").getMethod("sendPacket", getNMSClass("Packet"));
-	    sendPacket.invoke(getConnection(player), packet);
+	    getNMSClass("PlayerConnection").getMethod("sendPacket", getNMSClass("Packet")).invoke(getConnection(player), packet);
 	} catch (Exception e) {
 	    e.printStackTrace();
 	}
@@ -208,10 +158,7 @@ public class CMIScoreboardManager {
     }
 
     private static Object getConnection(Player player) throws Exception {
-	Method getHandle = player.getClass().getMethod("getHandle");
-	Object nmsPlayer = getHandle.invoke(player);
-	Field conField = nmsPlayer.getClass().getField("playerConnection");
-	Object con = conField.get(nmsPlayer);
-	return con;
+	Object nmsPlayer = player.getClass().getMethod("getHandle").invoke(player);
+	return nmsPlayer.getClass().getField("playerConnection").get(nmsPlayer);
     }
 }
